--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,2 +1,5 @@
+@if (router.url !== '/auth') {
+  <app-nav-bar></app-nav-bar>
+}
+
 <router-outlet></router-outlet>
-<!-- <app-medecin></app-medecin> -->
